--- a/force-app/main/default/experiences/Portal_para_Servicio_al_Cliente1/config/nativeConfig.json
+++ b/force-app/main/default/experiences/Portal_para_Servicio_al_Cliente1/config/nativeConfig.json
@@ -1,5 +1,19 @@
 {
   "id" : "e8a59368-8f26-4466-a79d-80b66cba67ef",
+  "mobilePublisherAppUpdateConfig" : {
+    "forceAppUpdate" : false,
+    "enableAppUpdate" : false,
+    "minVersion" : {
+      "ios" : {
+        "version" : "10.0",
+        "url" : "https://apps.apple.com/us"
+      },
+      "android" : {
+        "version" : "10.1",
+        "url" : "https://play.google.com/store"
+      }
+    }
+  },
   "nativeMobileNavConfig" : {
     "showBackButton" : true,
     "showHamburgerMenuWithBackButton" : false
