Agrego list view de casos

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -201,6 +201,9 @@
 		<name>LightningComponentBundle</name>
 	</types>
 	<types>
+		<members>Case.Miscasos</members>
+		<members>Case.Miscasosabiertos</members>
+		<members>Case.Todosloscasosabiertos</members>
 		<members>Task.FS_VistaTareasCasos</members>
 		<name>ListView</name>
 	</types>
