--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -40,6 +40,10 @@
 		<name>ContentAsset</name>
 	</types>
 	<types>
+		<members>Fisa</members>
+		<name>CspTrustedSite</name>
+	</types>
+	<types>
 		<members>Account.FS_Carterizacion__c</members>
 		<members>Account.FS_ColaAtencion__c</members>
 		<members>Account.FS_CorreosNotificacionesServicios__c</members>
