--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -55,6 +55,8 @@
 		<members>Case.FS_AceptaInstalacionParche__c</members>
 		<members>Case.FS_AceptaPaseProducion__c</members>
 		<members>Case.FS_AceptaRespuesta__c</members>
+		<members>Case.FS_AgenteN2__c</members>
+		<members>Case.FS_AgenteQA__c</members>
 		<members>Case.FS_AprobacionCertificacionParcheQA__c</members>
 		<members>Case.FS_AprobacionDisenioTecnico__c</members>
 		<members>Case.FS_AprobacionInstalacionParcheRelease__c</members>
