--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -12,6 +12,8 @@
 		<members>FeedCommentTriggerHandler</members>
 		<members>FeedCommentTriggerHelper</members>
 		<members>FeedCommentTriggerHelper_Test</members>
+		<members>FeedItemTriggerHandler</members>
+		<members>FeedItemTriggerHelper</members>
 		<members>JobValidacionRespuesta</members>
 		<members>JobValidacionRespuesta_Test</members>
 		<members>TrabajoAgenteHandler</members>
@@ -22,6 +24,7 @@
 	<types>
 		<members>CaseTrigger</members>
 		<members>FeedCommentTrigger</members>
+		<members>FeedItemTrigger</members>
 		<members>TrabajoAgenteTrigger</members>
 		<name>ApexTrigger</name>
 	</types>
@@ -332,5 +335,5 @@
 		<members>Case.FS_ValidacionRespuestaCliente</members>
 		<name>ValidationRule</name>
 	</types>
-	<version>55.0</version>
+	<version>58.0</version>
 </Package>
