--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -184,6 +184,10 @@
 		<name>FlexiPage</name>
 	</types>
 	<types>
+		<members>FS_FlujoTarea</members>
+		<name>Flow</name>
+	</types>
+	<types>
 		<members>*</members>
 		<name>GlobalValueSet</name>
 	</types>
