--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -337,6 +337,7 @@
 		<members>Case.FS_ValidacionRechazoSolucionDefinitivaN2</members>
 		<members>Case.FS_ValidacionRechazoSolucionIPN2</members>
 		<members>Case.FS_ValidacionRespuestaCliente</members>
+		<members>Case.FS_validacionCasoNuevoAgente</members>
 		<name>ValidationRule</name>
 	</types>
 	<version>58.0</version>
