--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -344,6 +344,7 @@
 		<members>Case.FS_ValidacionRespuestaCliente</members>
 		<members>Case.FS_ValidacionTipoIncidente</members>
 		<members>Case.FS_validacionCasoNuevoAgente</members>
+		<members>Case.FS_ValidacionSolucionCortoPlazo</members>
 		<name>ValidationRule</name>
 	</types>
 	<version>58.0</version>
