--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -180,6 +180,8 @@
 		<members>FS_CorreosClientesCasos/FS_PaseProduccionAceptado</members>
 		<members>FS_CorreosClientesCasos/FS_RechazoRespuesta</members>
 		<members>FS_CorreosClientesCasos/FS_ValidacionInformacion</members>
+		<members>FS_CorreosClientesCasos/FS_ValidacionInformacionIncidenteDefinitivo</members>
+		<members>FS_CorreosClientesCasos/FS_ValidacionInformacionIncidentePuntual</members>
 		<members>FS_CorreosClientesCasos/FS_ValidacionInformacionSolicitud</members>
 		<name>EmailTemplate</name>
 	</types>
@@ -342,9 +344,9 @@
 		<members>Case.FS_ValidacionRechazoSolucionDefinitivaN2</members>
 		<members>Case.FS_ValidacionRechazoSolucionIPN2</members>
 		<members>Case.FS_ValidacionRespuestaCliente</members>
+		<members>Case.FS_ValidacionSolucionCortoPlazo</members>
 		<members>Case.FS_ValidacionTipoIncidente</members>
 		<members>Case.FS_validacionCasoNuevoAgente</members>
-		<members>Case.FS_ValidacionSolucionCortoPlazo</members>
 		<name>ValidationRule</name>
 	</types>
 	<version>58.0</version>
