--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -168,6 +168,10 @@
 		<name>CustomObject</name>
 	</types>
 	<types>
+		<members>FS_BaseConocimiento__c</members>
+		<name>CustomTab</name>
+	</types>
+	<types>
 		<members>FS_CorreosClientesCasos</members>
 		<members>FS_CorreosClientesCasos/FS_ActualizacionInformacionCliente</members>
 		<members>FS_CorreosClientesCasos/FS_AnalisisCaso</members>
